<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blueb"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="53dp"
        android:gravity="center_vertical"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/welcome_to_my_app"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:ems="10"
        android:hint="@string/user_id_email_no"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnlonin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/DarkBlue"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/DarkBlue"
        android:gravity="center"
        android:text="@string/sing_up" />


</LinearLayout>