<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaceActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="35sp"
        app:cardElevation="25sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_your_oder_place"
            android:textColor="@color/LightBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        app:cardCornerRadius="35sp"
        app:cardElevation="35sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtname"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300sp"
                android:layout_height="45sp"
                android:background="@drawable/round_butten" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="35sp"
        app:cardElevation="35sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtemail"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300sp"
                android:layout_height="45sp"
                android:background="@drawable/round_butten" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="35sp"
        app:cardElevation="35sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtcnt"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/contact">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300sp"
                android:layout_height="45sp"
                android:background="@drawable/round_butten" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5sp"
        app:cardCornerRadius="35sp"
        app:cardElevation="35sp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtadd"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/shipping_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300sp"
                android:layout_height="45sp"
                android:background="@drawable/round_butten" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:text="@string/delivery_type"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/normal" />
    </RadioGroup>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="35sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            app:cardCornerRadius="25sp">

            <Button
                android:id="@+id/btnconfirmorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:textColor="@color/LightBlue"/>


        </androidx.cardview.widget.CardView>
</LinearLayout>