<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/all_dileses_food_for_you"
            android:textColor="#F5A73A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/princefoodlogo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/roung_backgroundup">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="360sp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <ImageView
                    android:id="@+id/imgpizza"
                    android:layout_width="150sp"
                    android:layout_height="130sp"
                    android:layout_margin="10sp"
                    android:src="@drawable/pizza" />

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120sp"
                    android:gravity="center"
                    android:text="@string/pizza"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgburger"
                    android:layout_width="150sp"
                    android:layout_height="130sp"
                    android:layout_marginStart="180sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/burger" />

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180sp"
                    android:layout_marginTop="120sp"
                    android:gravity="center"
                    android:text="@string/burger"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="360sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    app:cardCornerRadius="15sp"
                    app:cardElevation="10sp">

                    <ImageView
                        android:id="@+id/imgsandwich"
                        android:layout_width="150sp"
                        android:layout_height="130sp"
                        android:layout_margin="10sp"
                        android:src="@drawable/sandwich" />

                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120sp"
                        android:gravity="center"
                        android:text="@string/sandwich"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgfastfood"
                        android:layout_width="160sp"
                        android:layout_height="110sp"
                        android:layout_marginStart="180sp"
                        android:layout_marginTop="20sp"
                        android:src="@drawable/fastfood" />

                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="180sp"
                        android:layout_marginTop="125sp"
                        android:gravity="center"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="360sp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp">

                <ImageView
                    android:id="@+id/imgicecream"
                    android:layout_width="150sp"
                    android:layout_height="130sp"
                    android:layout_margin="10sp"
                    android:src="@drawable/icecream" />

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125sp"
                    android:layout_marginStart="10sp"
                    android:gravity="center"
                    android:text="@string/ice_cream"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgcolddrink"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:layout_marginStart="180sp"
                    android:src="@drawable/colddrink" />

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180sp"
                    android:layout_marginTop="125sp"
                    android:gravity="center"
                    android:text="@string/cold_drink"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
</LinearLayout>

</LinearLayout>