<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FastfoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20sp"
            app:cardElevation="30sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/all_type_of_fat_food"
                android:textColor="@color/DarkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/drymanchurian"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="5sp"
                    android:src="@drawable/manchurian" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/dry_manchurian"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/round_background"
        android:orientation="vertical"
        android:scrollIndicators="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/franchfries"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="5sp"
                    android:src="@drawable/frenchfries" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/french_fries"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/frankie"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="120sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="5sp"
                    android:src="@drawable/frankie" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/frankie"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dosa"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="120sp"
                    android:layout_height="100sp"
                    android:layout_margin="5sp"
                    android:src="@drawable/dosa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/dosa"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/hotdog"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="5sp"
                    android:src="@drawable/hotdog" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/hot_dog"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/vadapav"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="30sp">

                <ImageView
                    android:layout_width="120sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="5sp"
                    android:src="@drawable/vadapav" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180sp"
                    android:text="@string/vada_pav"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>